Github actions branch fix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,11 @@ name: PSP Service CI
 on:
   push:
     branches:
-      - main
+      - master
       - "feature/**"
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   build:
