--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,10 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
 
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14'
+    implementation("org.apache.commons:commons-lang3:3.18.0")
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:5.3.1"
 }
 
 kotlin {
